--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.buttonone</groupId>
-    <artifactId>junit5-prac</artifactId>
+    <artifactId>selenium-practice</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
